Fix version display, working on collapse.

--- a/alien4cloud-ui/src/main/webapp/styles/topology-svg.scss
+++ b/alien4cloud-ui/src/main/webapp/styles/topology-svg.scss
@@ -129,6 +129,12 @@
   pointer-events: all;
 }
 
+.collapsebar {
+  fill: whitesmoke;
+  fill-opacity: 1;
+  pointer-events: all;
+}
+
 .link {
   fill: none;
   stroke-width: 1px;
